samples/_failures_safe/1761484150_812120_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f12cd38e.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
